[package]
name = "pdb"
version = "0.4.0"
description = "A parser for Microsoft PDB (Program Database) debugging information"
repository = "https://github.com/willglynn/pdb"
authors = ["Will Glynn <will@willglynn.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    "fixtures/*",
]

[dependencies]
fallible-iterator = "0.1.6"
scroll = { version = "0.9.2", features = ["derive"] }
uuid = "0.7.2"

[dev-dependencies]
# for examples/
getopts = "0.2.18"

# for tests/
reqwest = "0.9.10"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{version}}"
no-dev-version = true
