[package]
name = "pdb"
version = "0.7.0"
description = "A parser for Microsoft PDB (Program Database) debugging information"
repository = "https://github.com/willglynn/pdb"
authors = ["Jan Michael Auer <mail@jauer.org>", "Will Glynn <will@willglynn.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    "fixtures/*",
]

[dependencies]
fallible-iterator = "0.2.0"
scroll = "0.10.1"
uuid = "0.8.1"

[dev-dependencies]
# for examples/
getopts = "0.2.21"

# for tests/
reqwest = "0.9.10"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-name = "{{version}}"
tag-message = "Release {{version}}"
no-dev-version = true
